# guardrail-rs

./: .devcontainer  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  book.toml  clippy.toml  codecov.yml  deny.toml  docker-compose.yml  guardrail.example.toml  justfile
.config/: nextest.toml
.github/: NEXT_PUSH_ISSUE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  release.yml
Day 1/: main.rs  multiVar.rs  readme.md  var.rs
Day 2/: NumericOperaions.rs  TypeConversion.rs  boolType.rs  charType.rs  explicitTypeAnnotation.rs  flostingPointTypes.rs  readme.md  typeInference.rs
Day 3/: break_with_value.rs  else_if.rs  for.rs  if_else.rs  if_expression.rs  ignoreVar.rs  infinite_loop.rs  iterate_arrays.rs  labeled_loop.rs  readme.md  while.rs
Day 4/: funcPram.rs  funcRe.rs  readme.md
Day 5/: readme.md  tuple.rs
contrib/: grafana-dashboard.json  prometheus.yml
crates/guardrail-classifiers/: Cargo.toml
crates/guardrail-classifiers/benches/: classifier_benchmarks.rs
crates/guardrail-classifiers/examples/: custom_stage.rs  embedded_pipeline.rs
crates/guardrail-classifiers/src/: classifier.rs  injection.rs  lib.rs  onnx.rs  pii.rs
crates/guardrail-classifiers/src/rules/: injection.rules
crates/guardrail-cli/: Cargo.toml
crates/guardrail-cli/examples/: custom_stage.rs  minimal.rs
crates/guardrail-cli/src/: cli.rs  commands.rs  main.rs
crates/guardrail-config/: Cargo.toml
crates/guardrail-config/src/: injection.rules  lib.rs  loader.rs  schema.rs  validate.rs
crates/guardrail-core/: Cargo.toml
crates/guardrail-core/src/: decision.rs  error.rs  lib.rs  pipeline.rs  policy.rs  request.rs  test_helpers.rs
crates/guardrail-proxy/: Cargo.toml
crates/guardrail-proxy/src/: audit.rs  audit_log.rs  auth.rs  error.rs  forward.rs  handler.rs  lib.rs  metrics.rs  response.rs  server.rs  state.rs  telemetry.rs  translate.rs
crates/guardrail-test-suite/: Cargo.toml
crates/guardrail-test-suite/benches/: pipeline.rs
crates/guardrail-test-suite/src/: lib.rs
crates/guardrail-test-suite/tests/: proxy_e2e.rs
dev/bench/: data.js
docs/: SUMMARY.md  architecture.md  benchmarks.md  configuration.md  deployment.md  onnx-models.md  policy-rules.md  stage-api.md  threat-model.md
examples/: README.md  curl_test.sh  minimal.py  node_client.js  python_client.py
examples/notebooks/: quickstart_colab.ipynb
models/: README.md  export_models.sh
tests/fixtures/: README.md  clean_prompts.json  injection_prompts.json  pii_prompts.json  policy_cases.json
