[workspace]
members = [
    "crates/guardrail-core",
    "crates/guardrail-classifiers",
    "crates/guardrail-proxy",
    "crates/guardrail-config",
    "crates/guardrail-cli",
    "crates/guardrail-test-suite",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
# NOTE: the spec requests edition 2024. We deliberately stay on 2021 here
# because this environment has no Rust toolchain available to verify the
# 2024-edition migration (RPITIT capture rules, `if let` temporary scoping,
# and the reserved `gen` keyword are all breaking changes that could
# silently miscompile without a compiler to check against). Bumping to 2024
# is a single-line change recommended as the *first* step once a toolchain
# is available: run `cargo fix --edition` per crate, then `cargo test --workspace`.
edition     = "2021"
authors     = ["Mattral <your@email.com>"]
license     = "Apache-2.0 OR MIT"
repository  = "https://github.com/Mattral/guardrail-rs"
homepage    = "https://github.com/Mattral/guardrail-rs"
readme      = "README.md"
description = "Sub-millisecond LLM security proxy: detect prompt injection, redact PII, and block toxic content. OpenAI-compatible drop-in."
categories  = ["web-programming", "network-programming", "science::ml"]
keywords    = ["llm", "security", "proxy", "guardrail", "prompt-injection"]

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
# HTTP
hyper          = { version = "1", features = ["http1", "http2", "server"] }
hyper-util     = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = { version = "0.1" }
reqwest        = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
# Config
toml           = "0.8"
# Error handling
thiserror      = "2"
anyhow         = "1"
# Observability
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender     = "0.2"
tracing-opentelemetry = "0.28"
opentelemetry        = { version = "0.27", features = ["trace"] }
opentelemetry_sdk    = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp   = { version = "0.27", features = ["grpc-tonic", "trace"] }
# Regex
regex = "1"
# Metrics
prometheus = "0.13"
# Misc
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
