[workspace]
members = [
    "crates/guardrail-core",
    "crates/guardrail-classifiers",
    "crates/guardrail-proxy",
    "crates/guardrail-config",
    "crates/guardrail-cli",
    "crates/guardrail-test-suite",
]
resolver = "2"

[workspace.package]
# IMPORTANT — version bump checklist: this version is consumed via
# `version.workspace = true` for each crate's own `[package]`, but Cargo
# does NOT propagate it into the internal `{ path = "..", version = ".." }`
# dependency requirements in each crate's `[dependencies]` table (a
# path+version dependency requires a *literal* version string — Cargo has
# no `version.workspace = true` shorthand for dependency requirements as of
# this writing). Bumping this version WITHOUT also updating the matching
# `version = "X.Y.Z"` string in every internal
# `guardrail-* = { path = "...", version = "..." }` line (14 occurrences
# across crates/*/Cargo.toml as of this comment) will cause `cargo publish`
# to either fail or — worse — succeed while publishing a crate whose
# manifest requires a version of its sibling that doesn't match what's
# actually being released. Grep for `version = "0.1.0"` under `crates/` and
# update every match alongside this line.
version     = "0.1.0"
# NOTE: the spec requests edition 2024. We deliberately stay on 2021 here
# because this environment has no Rust toolchain available to verify the
# 2024-edition migration (RPITIT capture rules, `if let` temporary scoping,
# and the reserved `gen` keyword are all breaking changes that could
# silently miscompile without a compiler to check against). Bumping to 2024
# is a single-line change recommended as the *first* step once a toolchain
# is available: run `cargo fix --edition` per crate, then `cargo test --workspace`.
edition     = "2021"
authors     = ["Mattral <your@email.com>"]
license     = "Apache-2.0 OR MIT"
repository  = "https://github.com/Mattral/guardrail-rs"
homepage    = "https://github.com/Mattral/guardrail-rs"
readme      = "README.md"
description = "Sub-millisecond LLM security proxy: detect prompt injection, redact PII, and block toxic content. OpenAI-compatible drop-in."
categories  = ["web-programming", "network-programming", "machine-learning"]
keywords    = ["llm", "security", "proxy", "guardrail", "prompt-injection"]

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
# HTTP
hyper          = { version = "1", features = ["http1", "http2", "server"] }
hyper-util     = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = { version = "0.1" }
reqwest        = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
# Config
toml           = "0.8"
# Error handling
thiserror      = "2"
anyhow         = "1"
# Observability
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender     = "0.2"
tracing-opentelemetry = "0.28"
opentelemetry        = { version = "0.27", features = ["trace"] }
opentelemetry_sdk    = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp   = { version = "0.27", features = ["grpc-tonic", "trace"] }
# Regex
regex = "1"
# Metrics
prometheus = "0.13"
# Misc
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
arc-swap = "1"
clap = { version = "4", features = ["derive", "env"] }
