[package]
name        = "guardrail-cli"
description = "Command-line interface for guardrail-rs"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
categories.workspace  = true
keywords.workspace    = true

[[bin]]
name = "guardrail"
path = "src/main.rs"

[features]
default = []
onnx = ["guardrail-proxy/onnx", "guardrail-config/onnx", "guardrail-classifiers/onnx"]

[dependencies]
guardrail-core        = { path = "../guardrail-core" }
guardrail-config      = { path = "../guardrail-config" }
guardrail-classifiers = { path = "../guardrail-classifiers" }
guardrail-proxy       = { path = "../guardrail-proxy" }

clap   = { workspace = true }
tokio  = { workspace = true }
anyhow = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["signal"] }

[dev-dependencies]
tempfile = "3"
