[package]
name        = "guardrail-cli"
description = "Command-line interface for guardrail-rs"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
categories.workspace  = true
keywords.workspace  = true
readme             = "../../README.md"

[[bin]]
name = "guardrail"
path = "src/main.rs"

[features]
default = []
onnx = ["guardrail-proxy/onnx", "guardrail-config/onnx", "guardrail-classifiers/onnx"]

[dependencies]
guardrail-core        = { path = "../guardrail-core", version = "0.1.0" }
guardrail-config      = { path = "../guardrail-config", version = "0.1.0" }
guardrail-classifiers = { path = "../guardrail-classifiers", version = "0.1.0" }
guardrail-proxy       = { path = "../guardrail-proxy", version = "0.1.0" }

clap   = { workspace = true }
tokio  = { workspace = true }
anyhow = { workspace = true }

tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = "0.2"
opentelemetry_sdk  = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }

serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["signal"] }

[dev-dependencies]
tempfile = "3"
