[package]
name        = "guardrail-config"
description = "Configuration loading, validation, and hot-reload for guardrail-rs"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
categories.workspace  = true
keywords.workspace  = true
readme             = "../../README.md"

[features]
default = []
onnx = ["guardrail-classifiers/onnx"]

[dependencies]
guardrail-core        = { path = "../guardrail-core", version = "0.1.0" }
guardrail-classifiers = { path = "../guardrail-classifiers", version = "0.1.0" }
serde       = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
arc-swap    = { workspace = true }

[dev-dependencies]
tempfile = "3"
