[package]
name        = "guardrail-core"
description = "Core types, pipeline, and stage trait for guardrail-rs"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
categories.workspace  = true
keywords.workspace    = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
serde_json  = { workspace = true }
tokio-test  = "0.4"
