[package]
name        = "guardrail-core"
description = "Core types, pipeline, and stage trait for guardrail-rs"
version.workspace     = true
edition.workspace     = true
rust-version.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
categories.workspace  = true
keywords.workspace  = true
readme             = "../../README.md"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
uuid        = { version = "1", features = ["serde", "v4"] }
regex       = "1"
# Optional: enables GuardrailError::Upstream(#[from] reqwest::Error).
# See the module doc in src/error.rs for the rationale.
reqwest     = { workspace = true, optional = true }

[features]
default = []
# Enables `reqwest::Error` as the inner type of `GuardrailError::Upstream`,
# matching the spec exactly. Off by default to keep guardrail-core's
# dependency footprint minimal; guardrail-proxy enables this feature.
reqwest-errors = ["reqwest"]

[dev-dependencies]
tokio       = { workspace = true }
serde_json  = { workspace = true }
tokio-test  = "0.4"
